# mlir-camp

./: .gitignore  README.md
toyalone/: CMakeLists.txt
toyalone/include/toy/: AST.h  CMakeLists.txt  Ops.td  OpsDialect.h  Parser.h
toyalone/lib/: CMakeLists.txt
toyalone/lib/mlir/: CMakeLists.txt  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  OpsDialect.cpp  ShapeInferencePass.cpp  ToyCombine.cpp
toyalone/test/: CMakeLists.txt  codegen.toy  exp-test.toy  matmul-test.toy
toyalone/toy/: CMakeLists.txt  toyc.cpp
toyalone/toy/include/toy/: Ops.td  Parser.h
toyalone/toy/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ToyCombine.cpp
